Removendo boiler plate code da classe restaurante, adicionando relacao de restaurante com cozinhas, restringindo campos nullable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # to generate a jar file using command line tool you can run: ./mvnw package and to run you can: java -jar target/algafood-api-0.0.1-SNAPSHOT.jar
 # to run in the command line using the prod ou dev profile you can pass as a parameter: java -jar target/algafood-api-0.0.1-SNAPSHOT.jar --spring.profiles.active=production
 
